@@ -1,3 +1,6 @@
+2015-08-04 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/conn.c: added support for chained certificates.
+
 2015-07-20  Stipe Tolj  <stolj at kannel.org>
     * gw/dlr.c: add the original msg DLR bitmask to the meta-data of the DLR, 
       allowing smsbox applications to retrieve this information on-the-fly
